flex wrap issue fix

--- a/bezier-visualizer/style.scss
+++ b/bezier-visualizer/style.scss
@@ -69,6 +69,7 @@ button {
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 10px;
     transition: 0.4s;
+    margin-bottom: 5px;
     background: rgba(255, 255, 255, 0.1);
 }
 
@@ -77,9 +78,6 @@ button:hover {
     background: rgba(255, 255, 255, 0.1);
 }
 
-hr {
-    margin: 5px;
-}
 
 select *,
 select {
@@ -95,4 +93,11 @@ select * {
 
 #controls p {
     margin: 5px;
+}
+
+hr {
+    margin: 6px;
+    border: 0;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.342);
 }
